# rogame

./: .env.development  .gitignore  CLAUDE.md  CLOUD_SETUP.md  DEEPLINK_TESTING.md  EXPLAIN.md  GOOGLE_DRIVE_AUTH_GUIDE.md  REACT_REFACTORING.md  TAILWIND_V4_THEME.md  TAILWIND_V4_UPGRADE.md  THEME_IMPLEMENTATION.md  UI.md  deeplink.md  gaithich.md  package-lock.json  package.json  rogame.db  start-dev.sh  test-cloud-upload.html  test-deeplink.bat  test-deeplink.sh
.claude/: settings.json
.claude/commands/: create_checkpoint.md
.claude/hooks/: checkpoint.py  remove_checkpoint.py
.cursor/rules/: tauri.mdc
.serena/: project.yml
public/: oauth-callback.html
scripts/: generate_mock_games.sh  generate_server_saves.sh  generate_windows_games.ps1  setup_fake_steam_macos.sh  test_backup_restore.sh
server/: .gitignore  README.md  package-lock.json  package.json  test-upload.html  tsconfig.json
server/docs/: GOOGLE.md  (+1 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  REFACTORING.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: EXPLAIN.md  cloud_tokens.rs  db.rs  error.rs  game_scanner.rs  lib.rs  libraryfolders.vdf  main.rs  save_game_location.json  save_manager.rs  security.rs  steam_game_location.json
src-tauri/src/commands/: game_commands.rs  mod.rs  save_commands.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  repository.rs
src-tauri/src/game_scanner/: config.rs  library_scanner.rs  mod.rs  models.rs
src-tauri/src/save_manager/: backup.rs  mod.rs  models.rs
src-tauri/src/utils/: formatting.rs  mod.rs  paths.rs
(+81 files in other folders)
