[package]
name = "rogame"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rogame_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.18", features = [] }
tauri-plugin-opener = "2.0.0-alpha.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4.0"
dirs = "5.0.1"
glob = "0.3.1"
chrono = "0.4.31"
rusqlite = { version = "0.30.0", features = ["bundled"] }
once_cell = "1.18.0"
uuid = { version = "1.7", features = ["v4"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "sync"] }
tauri-plugin-deep-link = "2"
zip = "0.6"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

